# SimulIDE

./: SimulIDE.sln
1/simavr-master/: .gitignore  CMakeLists.txt  Makefile.common  Makefile.legacy  README.rst
1/simavr-master/doc/: Makefile.legacy
1/simavr-master/doc/coding/: doxygen-examples.cpp  doxygen-rules.c  gnu-coding-standards.c  template.h
1/simavr-master/doc/doxygen/: Doxyfile
1/simavr-master/doc/sphinx/: make.bat
1/simavr-master/examples/: CMakeLists.txt
1/simavr-master/examples/boards/: CMakeLists.txt
1/simavr-master/examples/boards/board_hd77480/: CMakeLists.txt  Makefile.legacy  atmega48_charlcd.c  avr_hd44780.c  avr_hd44780.h  avr_hd44780_conf.h  charlcd.c
1/simavr-master/examples/boards/board_i2ctest/: CMakeLists.txt  Makefile.legacy  atmega1280_i2ctest.c
1/simavr-master/examples/boards/board_ledramp/: CMakeLists.txt  atmega48_ledramp.c  ledramp.c
1/simavr-master/examples/boards/board_timer_64led/: CMakeLists.txt  Makefile.legacy
1/simavr-master/examples/broken/board_simduino/: CMakeLists.txt  README  atmega328p_dummy_blinky.c  error.txt  simduino.c
1/simavr-master/examples/broken/board_ssd1306/: atmega32_ssd1306.c  images.c  images.h  ssd1306.c  ssd1306.h  ssd1306demo.c
1/simavr-master/examples/broken/extra_board_usb/: README  simusb.c  vhci_usb.c  vhci_usb.h
1/simavr-master/examples/featured/: CMakeLists.txt
1/simavr-master/examples/featured/analog-in-out-serial/: CMakeLists.txt  analog-in-out-serial.c  potentiometer.c  potentiometer.h
1/simavr-master/examples/featured/blink-led/: CMakeLists.txt  blink-led.c
1/simavr-master/examples/featured/fade-led/: CMakeLists.txt  README.txt  fade-led.c
1/simavr-master/examples/featured/python/: ArduinoPinMapping.py  blink-led.py  include  simavr-api.h
1/simavr-master/examples/featured/uart/: CMakeLists.txt  README.txt  atmega88_uart_echo.c  uart.c  uart_echo.diff
1/simavr-master/examples/parts/: ac_input.c  ac_input.h  button.c  button.h  hc595.c  hc595.h  i2c_eeprom.c  i2c_eeprom.h  stepper.c  stepper.h  thermistor.c  thermistor.h
1/simavr-master/examples/parts/bus/: uart_pty.c  uart_pty.h  uart_udp.c  uart_udp.h
1/simavr-master/examples/parts/lcd/: hd44780.c  hd44780.h  hd44780_glut.c  hd44780_glut.h  ssd1306_glut.c  ssd1306_glut.h  ssd1306_virt.c  ssd1306_virt.h
1/simavr-master/extra/arduino/: arduidiot_pins.c  arduidiot_pins.h
1/simavr-master/firmwares/: CMakeLists.txt
1/simavr-master/firmwares/analog-in-out-serial/: CMakeLists.txt  analog-in-out-serial.c
1/simavr-master/firmwares/analog-read-serial/: analog-read-serial.c
1/simavr-master/firmwares/blink-led/: CMakeLists.txt  blink-led.c
1/simavr-master/firmwares/digital-read-serial/: digital-read-serial.c
1/simavr-master/firmwares/fade-led/: CMakeLists.txt  fade-led-basic.c  fade-led.c
1/simavr-master/firmwares/low-level-uart/: CMakeLists.txt  atmega2560_uart_echo.c
1/simavr-master/firmwares/read-analog-voltage/: read-analog-voltage.c
1/simavr-master/firmwares/twi/: avr_twi_master.c  avr_twi_master.h  twimaster.c  twimaster.h
1/simavr-master/simavr/: CMakeLists.txt  Makefile.legacy  cpp-usage.txt  main-page.md  sim_core_config.h.in  sim_core_decl.h.in  unused-code.c
1/simavr-master/simavr/cores/: sim_90usb162.c  sim_core_declare.h  sim_mega2560.c
1/simavr-master/simavr/cores/disabled/: sim_mega324.c
1/simavr-master/simavr/include/: avr_adc.h  avr_bitbang.h  avr_eeprom.h  avr_extint.h  avr_flash.h  avr_ioport.h  avr_lin.h  avr_spi.h  avr_timer.h  avr_twi.h  avr_uart.h  avr_usb.h  avr_watchdog.h  doc.h  fifo_declare.h  logging.h  macros.h  sim_avr.h  sim_avr_types.h  sim_core.h  sim_cycle_timers.h  sim_elf.h  sim_gdb.h  sim_hex.h  sim_interrupts.h  sim_io.h  sim_irq.h  sim_network.h  sim_regbit.h  sim_time.h  sim_vcd_file.h
1/simavr-master/simavr/include/avr/: avr_mcu_section.h
1/simavr-master/simavr/source/: avr_adc.c  avr_bitbang.c  avr_eeprom.c  avr_extint.c  avr_flash.c  avr_ioport.c  avr_lin.c  avr_spi.c  avr_timer.c  avr_twi.c  avr_uart.c  avr_usb.c  avr_watchdog.c  run_avr.c  sim_avr.c  sim_core.c  sim_cycle_timers.c  sim_elf.c  sim_gdb.c  sim_hex.c  sim_interrupts.c  sim_io.c  sim_irq.c  sim_vcd_file.c
1/simavr-master/tests/: CMakeLists.txt  Makefile.legacy  atmega2560_uart_echo.c  atmega48_disabled_timer.c  atmega48_enabled_timer.c  atmega48_watchdog_test.c  atmega644_adc_test.c  atmega88_coroutine.c  atmega88_example.c  atmega88_timer16.c  attiny85_crash_gdb.c  test_atmega2560_uart_echo.c  test_atmega48_disabled_timer.c  test_atmega48_enabled_timer.c  test_atmega48_watchdog_test.c  test_atmega644_adc_test.c  test_atmega88_example.c  test_atmega88_timer16.c  test_atmega88_uart_echo.c  tests.c  tests.h
1/simavr-master/tools/: generate-sim_core_decl.sh  reindent
SimulIDE/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SimulIDE.csproj  packages.config
SimulIDE/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
SimulIDE/src/: INamedObject.cs  Utils.cs
SimulIDE/src/gui/: RamTable.cs  RamTable.xaml  RamTable.xaml.cs  TableWidgetItem.xaml  TableWidgetItem.xaml.cs
SimulIDE/src/gui/Disassembler/: Disassembler.xaml  Disassembler.xaml.cs
SimulIDE/src/gui/StateViewer/: StateViewer.xaml  StateViewer.xaml.cs
SimulIDE/src/gui/circuitwidget/: Chip.cs  Circuit.cs  CircuitPage.xaml  CircuitPage.xaml.cs  CircuitView.cs  CircuitWidget.xaml  CircuitWidget.xaml.cs  Connector.cs  Pin.cs
SimulIDE/src/gui/editor/: BaseDebugger.cs  CodeEditor.xaml  CodeEditor.xaml.cs  CodeEditorWidget.xaml  CodeEditorWidget.xaml.cs  (+4 more)
SimulIDE/src/simavr/: Sim_Avr.cs  Sim_Hex.cs  Sim_core_decl.cs
SimulIDE/src/simulator/: CircMatrix.cs  Simulator.cs  eElement.cs  eNode.cs  ePin.cs
Test/: Command.cs  Core.cs  MainWindow.xaml  MainWindow.xaml.cs  Test.csproj
Test/Properties/: AssemblyInfo.cs
simavr-master/examples/board_ds1338/: twimaster.c
simavr-master/examples/board_ssd1306/: ssd1306.c
simavr-master/examples/shared/: avr_twi_master.c  avr_twi_master.h  twimaster.c
simulide_0.4.13-SR5_Sources/: SimulIDE.pro
simulide_0.4.13-SR5_Sources/src/gui/: ramtable.cpp
(+440 files in other folders)
