# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(boards)
add_subdirectory(featured)

####################################################################################################
#
# End
#
####################################################################################################
