# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(board_hd77480)
add_subdirectory(board_i2ctest)
add_subdirectory(board_ledramp)
add_subdirectory(board_timer_64led)

# add_subdirectory(board_simduino) # broken

####################################################################################################
#
# End
#
####################################################################################################
