# -*- CMake -*-

#################################################################################

include_directories(
  ${CMAKE_SOURCE_DIR}/simavr/include
  )

add_executable(blink-led blink-led.c)
target_link_libraries(blink-led simavr pthread)

####################################################################################################
#
# End
#
####################################################################################################
