# -*- CMake -*-

#################################################################################

include_directories(
  ${CMAKE_SOURCE_DIR}/simavr/include
  )

add_executable(fade-led fade-led.c)
target_link_libraries(fade-led simavr pthread)

####################################################################################################
#
# End
#
####################################################################################################
